# Checkpoint_Engenharia_IA_N-vel-1

./: .env  .env.example  .gitignore  Checkpoint_Engenharia_IA_Nível 1.code-workspace  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
agent-orchestrator/: app.py  schemas.py  service.py
agent-orchestrator/agent/: agents_orchestrator.py
agents/: README.md
agents/analyst/: executor.py  metadata.py  server.py
agents/analyst/agent/: commentary_analysis.py
agents/auditor/: executor.py  metadata.py  server.py
agents/auditor/agent/: policy_audit.py
agents/moderator/: executor.py  metadata.py  server.py
agents/moderator/agent/: decision_moderation.py
bfa_service/: __init__.py  app.py  database.py  discovery.py  registry.py
frontend/: Dockerfile  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.jsx  ChatPage.jsx  Layout.jsx  StateContext.js  StateUtilPage.jsx  index.css  index.jsx
frontend/src/components/: AgentSelector.jsx  ChatBox.jsx  EventStream.jsx  PromptSuggestions.jsx  StatusPanel.jsx
frontend/src/services/: agentAdpater.js
