# ================================================================
# CHECKPOINT IA — COMMENT MODERATION SYSTEM CONFIGURATION
# ================================================================

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "checkpoint_ia_moderacao"
version = "0.1.0"
description = "Sistema descentralizado gRPC/A2A e Prefect com LangGraph para moderação de comentários."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"

keywords = [
    "agent", "multiagent", "moderation", "langgraph", "grpc", "prefect"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core comum para a malha de microsserviços
    "python-dotenv",
    "pydantic>=2.8.0",
    "pydantic-settings",
]

[project.optional-dependencies]
# Dependências exclusivas do Agent Orchestrator (Supervisor)
orchestrator = [
    "fastapi",
    "uvicorn[standard]",
    "a2a-sdk",
    "httpx",
    "ag-ui-protocol",
    "langchain",
    "langgraph>=0.1.0",
    "langgraph-checkpoint-sqlite>=2.0.0", # Essencial para o MVP com SQLite
    "aiosqlite",
    "langchain-openai",
    "langchain-community",
    "langgraph-checkpoint-sqlite",
    "prefect>=3.0.0",                      # Orquestração de tarefas e governança
]

# Hub de Registro e Descoberta Híbrida (BFA)
bfa_service = [
    "fastapi",
    "uvicorn",
    "httpx",
    "python-dotenv",
    "a2a-sdk",
    "langchain-openai",
    "rank-bm25",
    "numpy",
    "faiss-cpu",                    # Busca semântica densa
]

# Agente 1: Análise semântica e comportamental inicial
agent_analyst = [
    "a2a-sdk[http-server]",
    "mcp",
    "langchain-mcp-adapters",
    "httpx",
    "uvicorn",
    "langchain",
    "langchain_openai",
    "langchain-community",
]

# Agente 2: Auditoria de políticas e diretrizes (Consome o Smithery)
agent_auditor = [
    "a2a-sdk[http-server]",
    "mcp",
    "langchain-mcp-adapters",
    "httpx",
    "uvicorn",
    "langchain",
    "langchain_openai",
    "langchain-community",
]

# Agente 3: Consolidador de vereditos e recomendações
agent_moderator = [
    "a2a-sdk[http-server]",
    "mcp",
    "langchain-mcp-adapters",
    "httpx",
    "uvicorn",
    "langchain",
    "langchain_openai",
    "langchain-community",
]

dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent-orchestrator*", "agents*", "bfa_service*"]

[tool.black]
line-length = 100
include = '\.pyi?$'
extend-exclude = '''
/(
  | \.venv
  | data
  | database_data
  | frontend
  | tests
)/
'''

[tool.isort]
profile = "black"
line-length = 100
src_paths = ["agent-orchestrator", "agents", "bfa_service"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=agent-orchestrator --cov-report=term-missing"
pythonpath = ["agent-orchestrator", "agents", "bfa_service"]

[tool.coverage.run]
source = ["agent-orchestrator", "bfa_service"]
branch = true

[tool.pyright]
extraPaths = ["agent-orchestrator", "agents", "bfa_service"]
